--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
+    "@graphcms/rich-text-react-renderer": "^0.6.1",
     "@heroicons/react": "^2.0.14",
     "@next/font": "13.1.6",
     "@tailwindcss/typography": "^0.5.9",
+    "eslint": "8.33.0",
+    "eslint-config-next": "13.1.6",
     "graphql": "^16.6.0",
     "graphql-request": "^5.1.0",
     "moment": "^2.29.4",
@@ -23,7 +26,6 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.13",
-    "eslint-plugin-react": "^7.32.2",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
   }
