--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@tailwindcss/typography": "^0.5.9",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "framer-motion": "^9.0.2",
     "graphql": "^16.6.0",
     "graphql-request": "^5.1.0",
+    "gsap": "^3.11.4",
     "moment": "^2.29.4",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
