--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gsap": "^3.11.4",
     "moment": "^2.29.4",
     "next": "13.1.6",
+    "next-auth": "^4.23.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-spinners": "^0.13.8"
